# US-Visa-MLOps

./: .dockerignore  Dockerfile  LICENSE  app.py  demo.py  pyproject.toml  requirements.txt  setup.py  template.py
US_Visa/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py
US_Visa/configuration/: aws_connection.py  mongo_db_connection.py
US_Visa/constant/: __init__.py
US_Visa/data_access/: usvisa_data.py
US_Visa/entity/: artifact_entity.py  config_entity.py  estimator.py
US_Visa/exception/: __init__.py
US_Visa/pipeline/: prediction_pipeline.py  training_pipeline.py
US_Visa/utils/: main_utils.py
notebook/: 1_EDA_US_visa.ipynb  2_Feature_Engineering_and_Model_Training.ipynb  boston_data_drift_report.html  data_drift_demo_evidently.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
